--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "cool-ascii-faces": "1.3.4",
     "ejs": "2.4.1",
     "express": "4.13.3",
-    "pg": "4.x"
+    "pg": "4.x",
+    "pug": "^2.0.0-beta8"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,8 @@
     "heroku",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^1.11.0"
+  }
 }
